tests/NormalTests/paczka1/small_fuzzy/73046297.err
Error in line 7: LSp A371 39,60
Error in line 14: OseICF2LdAB S316 -1,1
Error in line 12: OseICF2LdAB S316 22,9
